--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^8.0.0",
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@crystalui/angular-lightbox": "^1.1.8",
+    "@iconscout/unicons": "^4.0.1",
+    "@nudgelabs/metron-design-system-lib": "^1.1.10",
+    "angular-highcharts": "^13.0.0",
+    "angular2-multiselect-dropdown": "^5.0.4",
+    "highcharts": "^10.2.1",
+    "ng-inline-svg": "^13.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
