--- a/angular.json
+++ b/angular.json
@@ -49,8 +49,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2.50mb",
+                  "maximumError": "2.50mb"
                 },
                 {
                   "type": "anyComponentStyle",
