--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng-inline-svg": "^13.1.2",
     "ngx-color-picker": "^12.0.1",
     "rxjs": "~6.6.0",
+    "tinycolor2": "^1.4.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
