Ngx datatable test

--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@ctrl/tinycolor": "^3.4.1",
     "@iconscout/unicons": "^4.0.1",
     "@nudgelabs/metron-design-system-lib": "^1.1.10",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "angular-highcharts": "^13.0.0",
     "angular2-multiselect-dropdown": "^5.0.4",
     "highcharts": "^10.2.1",
     "ng-inline-svg": "^13.1.2",
     "ngx-color-picker": "^12.0.1",
+    "npm": "^8.19.2",
+    "primeng": "^12.2.3",
     "rxjs": "~6.6.0",
     "tinycolor2": "^1.4.2",
     "tslib": "^2.3.0",
