--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,10 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/@nudgelabs/metron-design-system-lib/src/lib/styles/variables/_variables.scss"
+              "node_modules/@nudgelabs/metron-design-system-lib/src/lib/styles/variables/_variables.scss",
+              "./node_modules/@swimlane/ngx-datatable/index.css",
+              "./node_modules/@swimlane/ngx-datatable/themes/material.scss",
+              "./node_modules/@swimlane/ngx-datatable/assets/icons.css"
             ],
             "scripts": []
           },
